# ChangeLog for media-gfx/aafigure
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Sep 2009; James Rowe <jnrowe@gmail.com> metadata.xml:
  Restrict docutils use flag description to >media-gfx/aafigure-0.4.

*aafigure-0.4 (19 Sep 2009)

  19 Sep 2009; James Rowe <jnrowe@gmail.com> +aafigure-0.4.ebuild,
  metadata.xml:
  Version bump [475].

  28 Jul 2009; James Rowe <jnrowe@gmail.com> aafigure-0.2.ebuild:
  Keyworded x86.

  28 Jul 2009; James Rowe <jnrowe@gmail.com> aafigure-0.2.ebuild:
  Keyworded amd64.

*aafigure-0.2 (12 Jun 2009)

  12 Jun 2009; James Rowe <jnrowe@gmail.com> +aafigure-0.2.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
