@@ -4,13 +4,13 @@ Hash: SHA1
 DIST aafigure-0.2.tar.gz 20071 RMD160 56c5bfa009cb69345bdd6b3bd74b0ce754b6a90d SHA1 7e8f81aad9e945202537b00771fb58b37f5ecc29 SHA256 fc62ba7b3344b9aa9177f08554eea17d300d456b815c4f38460bd901ba9eb153
 DIST aafigure-0.4.tar.gz 46452 RMD160 8799db90dafade974671033ed8825a7b08605387 SHA1 d1382506f9ea9274f3c8ad0494ac393a1e74d185 SHA256 698eaf55bfd08a0fcc06e0393da1217d7def3c4631c93068950f9b9c37a4136c
 EBUILD aafigure-0.2.ebuild 383 RMD160 c1f471771ef8d3867175c094d5b459947c915aaf SHA1 b733d7545a0f51a41a4ac5dcecfab969e4b80591 SHA256 42e73eaed29cceb573d310b1e46af2146809a37e65af0fc1945a3e8d28e84513
-EBUILD aafigure-0.4.ebuild 1278 RMD160 f1579e38ceb77f84a2d5f59a9e599f149ca672ca SHA1 68951a480fb72746e838994ff7674dbb778b082e SHA256 b6d2b70b8a30abf260f613bc475e4a11e7de91f388e9303dac34032a53593132
-MISC ChangeLog 692 RMD160 bfd6c222c1aefbee4e1bf5aac3839b2104444295 SHA1 13d82eacbe462695d929fc627049ef87bddec2e1 SHA256 308c69675b797b338a29e9313152ad58c51e254e9e54c1dbd90a9e1560b4a050
+EBUILD aafigure-0.4.ebuild 1513 RMD160 c84315c5f279a9a1888b72946e0561fb55474282 SHA1 3b994824d07a6aa8d8ff4714a9f59c5d2ec28de6 SHA256 4594819fbaa8f1a1eb5a047d51b31a76886a280911d2c39ca2330a281d49634c
+MISC ChangeLog 809 RMD160 9f3684be11d118193cb152cdcb4c920942915b9d SHA1 e93c5fe653dc2c1b0ea814cfa79f6c3c68211a4f SHA256 0fb181c90860830f30b28719c83d2be9d60bdd525cc232893aa9bdcabca621c8
 MISC metadata.xml 545 RMD160 e84911767d4c6e97f30f0f95fd97add130376548 SHA1 ad97bae54276cf610a1788db876f7b2e1b58ed61 SHA256 4a0620b5d4a83fa77770248626817f2e828fde289c9819656b1eac9151c2a311
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkq1ET8ACgkQzJrj3cAXR0kjKQCdFy7nKoy3VNolBvwjHjZ6NjUU
-JLEAoIYe+2akEqIGQHrxFfBx2uT/MpRq
-=Bv/f
+iEYEARECAAYFAkq1HgEACgkQzJrj3cAXR0lcCwCgvqjdOAsXd0xKkIXXjkEVRXiV
+86sAniYfqpCCXAwvBRiWzBPED5WjX96j
+=R+VO
 -----END PGP SIGNATURE-----
