@@ -1,5 +1,5 @@
-docutils? ( >=dev-python/docutils-0.5 dev-python/setuptools ) >=app-shells/bash-3.2 virtual/python
-docutils? ( >=dev-python/docutils-0.5 dev-python/setuptools ) virtual/python
+doc? ( media-gfx/sphinxcontrib-aafig ) docutils? ( >=dev-python/docutils-0.5 dev-python/setuptools ) >=app-shells/bash-3.2 virtual/python
+doc? ( media-gfx/sphinxcontrib-aafig ) docutils? ( >=dev-python/docutils-0.5 dev-python/setuptools ) virtual/python
 0
 http://pypi.python.org/packages/source/a/aafigure/aafigure-0.4.tar.gz
 
